@@ -6,7 +6,9 @@ Revision history for Perl extension RPi::WiringPi.
         - we now use RPi::Const in replacement of RPi::WiringPi::Constant
           (closes #52)
         - updated diagrams with the ADS1115 ADC
-
+        - renamed the PWM test to show it also includes SPI
+        - re-enabled t/42 for interrupt both
+          
 2.3620  2017-07-13
         - worked around issue where bbdispatch/brewbuild was causing havoc on
           pin cleanup due to the LCD. After trial and headache, I just disabled
